--- a/practice.html
+++ b/practice.html
@@ -13,54 +13,60 @@
   <h1 class="topic bg-light text-center"></h1>
 
   <div class="container bg-light">
-    <div>
-      <div class="row">
-        <h1 class="text-center ">Introduction to HTML</h1>
+    <div class="row">
+      <h1 class="text-center ">Introduction to HTML</h1>
 
-        <div class="col-6">
-          <p>
-            HTML stands for Hyper Text Markup Language
-            HTML is the standard markup language for creating Web pages
-            HTML describes the structure of a Web page
-            HTML consists of a series of elements
-            HTML elements tell the browser how to display the content
-            HTML elements label pieces of content such as "this is a heading", "this is a paragraph", "this is a link",
-            etc.
-          
-          </p>
-        </div>
-        <div class="col-6 ">
-          <p>HTML stands for Hyper Text Markup Language
-            HTML is the standard markup language for creating Web pages
-            HTML describes the structure of a Web page
-            HTML consists of a series of elements
-            HTML elements tell the browser how to display the content
-            HTML elements label pieces of content such as "this is a heading", "this is a paragraph", "this is a link",
-            etc.
-          </p>
-        </div>
-        <div class="col-6 ">
-          <p>HTML stands for Hyper Text Markup Language
-            HTML is the standard markup language for creating Web pages
-            HTML describes the structure of a Web page
-            HTML consists of a series of elements
-            HTML elements tell the browser how to display the content
-            HTML elements label pieces of content such as "this is a heading", "this is a paragraph", "this is a link",
-            etc.
-          </p>
-        </div>
-        <div class="text-center">
-          <button class="btn btn-primary text-center "> <a href="https://www.youtube.com/" class="text-white text-decoration-none text-uppercase" >Learn More...</button> </a>
-        </div>
-
+      <div class="container col-6">
+        <p>
+          HTML stands for Hyper Text Markup Language
+          HTML is the standard markup language for creating Web pages
+          HTML describes the structure of a Web page
+          HTML consists of a series of elements
+          HTML elements tell the browser how to display the content
+          HTML elements label pieces of content such as "this is a heading", "this is a paragraph", "this is a link",
+          etc.
+        </p>
+      </div>
+      <div class="col-6 ">
+        <p>HTML stands for Hyper Text Markup Language
+          HTML is the standard markup language for creating Web pages
+          HTML describes the structure of a Web page
+          HTML consists of a series of elements
+          HTML elements tell the browser how to display the content
+          HTML elements label pieces of content such as "this is a heading", "this is a paragraph", "this is a link",
+          etc.
+        </p>
+      </div>
+      <div class="col-6 ">
+        <p>HTML stands for Hyper Text Markup Language
+          HTML is the standard markup language for creating Web pages
+          HTML describes the structure of a Web page
+          HTML consists of a series of elements
+          HTML elements tell the browser how to display the content
+          HTML elements label pieces of content such as "this is a heading", "this is a paragraph", "this is a link",
+          etc.
+        </p>
+      </div>
+      <div class="text-center">
+        <button class="btn btn-primary text-center "> <a href="https://www.youtube.com/"
+            class="text-white text-decoration-none text-uppercase">Learn More...</button> </a>
       </div>
 
     </div>
+
   </div>
-
-
-
-
+  </div>
+  <div class="container-fluid text-center">
+    <h1>bootstrap</h1>
+    <div class="bg-primary p-5 text-white">
+      First Box
+    </div>
+    <div class=" bg-warning p-5 text-white ">
+      second Box
+    </div>
+    <div class=" bg-dark p-5 text-white">
+      third Box
+    </div>
+  </div>
 </body>
-
 </html>
